adding .env file

--- a/api/.env
+++ b/api/.env
@@ -1,4 +1,4 @@
 
-HOST="mongodb+srv://devesh:e5m0WwZj2PkXO95P@cluster0-wssah.azure.mongodb.net/institute"
+DATABASE_URL ="mongodb+srv://devesh:e5m0WwZj2PkXO95P@cluster0-wssah.azure.mongodb.net/institute"
 PORT=3500
 ENV=development
